apps/authentik/prod/authentik/headers-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-headers
  namespace: authentik
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Host: auth.gwynbliedd.com
      X-Forwarded-Proto: https
      X-Forwarded-For: "true"
