apps/authentik/prod/authentik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`auth.gwynbliedd.com`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
      middlewares:
        - name: authentik-headers
          namespace: authentik
